<resources>
    <string name="label_act_login_welcome">Don\'t have a Venefica ID?</string>
    <string name="label_act_login_btn_sign_up">Register</string>
    <string name="label_act_login_btn_sign_in">Login</string>
    <string name="label_act_login_sign_in_with">Sign In With</string>
    <string name="label_act_register_user_title">Join the community!</string>
    <string name="label_act_reg_user_btn_join">Join</string>
    <string name="label_act_reg_user_btn_option_phone">Use phone number</string>
    <string name="label_act_reg_user_btn_option_email">Use E-mail</string>
    <string name="label_act_reg_user_inv_code">invitation code</string>
    <string name="label_act_reg_user_verify">Verify</string>
    <string name="label_act_reg_user_req_inv_code">Request invitation</string>
    <string name="label_act_reg_user_inv_title">I have an invitation</string>
    <string name="label_act_reg_user_req_inv_title">Request an invitation</string>
    <string name="label_act_reg_user_complete_profile">Your profile is incomplete, please fill missing fields.</string>
    <string name="label_act_login_or">or</string>
    <string name="label_act_login_forgot_pass">Forgot password</string>
    <string name="label_act_login_forgot_inv_code">Lost Invitation</string>
    <string name="label_act_login_req_pass">Request password</string>
    <string name="label_login">Email / Phone</string>
    <string name="label_connect_with">Connect with</string>
    <string name="label_password">Password</string>
    <string name="label_email">E-mail</string>
    <string name="label_phone">Phone</string>
    <string name="label_f_name">First Name</string>
    <string name="label_l_name">Last Name</string>
    <string name="label_birth">Date of Birth</string>
    <string name="label_zip">ZIP</string>
    <string name="label_county">County</string>
    <string name="label_city">City</string>
    <string name="label_area">Area</string>
    <string name="label_state">State</string>
    <string name="label_business_acc">Business Account</string>
    <string name="label_remember_me">Remember me</string>
    <string name="label_profile_image">Profile Image</string>
    <string name="label_dashboard_invite">Invite Friends</string>
    <string name="label_dashboard_messages">Messages</string>
    <string name="label_dashboard_browse">Browse</string>
    <string name="label_dashboard_post">Post</string>
    <string name="label_dashboard_selling">Selling</string>
    <string name="label_dashboard_buying">Buying</string>
    <string name="label_dashboard_watching">Watching</string>
    <string name="label_dashboard_account">Account</string>
    <string name="label_dashboard_reviews">Reviews</string>
    <string name="label_dashboard_settings">Settings</string>
    <string name="label_dashboard_signout">Sign Out</string>
    <string name="label_btn_ok">OK</string>
    <string name="label_btn_yes">Yes</string>
    <string name="label_btn_no">No</string>
    <string name="label_btn_save">Save</string>
    <string name="label_btn_cancel">Cancel</string>
    <string name="label_messages">Messages</string>
    <string name="label_settings_themes">Theme</string>
    <string name="label_settings_connect_with">Connect With</string>
    <string name="label_settings_services">Services</string>
    <string name="label_settings_sms">SMS</string>
    <string name="label_settings_email">Email</string>
    <string name="label_settings_calls">Calls</string>
    <string name="label_settings_logged_in">Stay logged in</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_twitter">Twitter</string>
    <string name="label_vk">VK</string>
    <string name="label_address">Address</string>
    <string name="label_postlisting_title">Enter details below</string>
    <string name="label_postlisting_listing_title">Title</string>
    <string name="label_postlisting_subtitle">Subtitle</string>
    <string name="label_postlisting_category">Category</string>
    <string name="label_postlisting_sel_category">Select a category</string>
    <string name="label_postlisting_photos">Photos</string>
    <string name="label_postlisting_description">Description</string>
    <string name="label_postlisting_condition">Condition</string>
    <string name="label_postlisting_price">Price</string>
    <string name="label_postlisting_currency">Currency</string>
    <string name="label_postlisting_add_photos">Add photos</string>
    <string name="label_postlisting_location">Location</string>
    <string name="label_postlisting_latitude">Latitude</string>
    <string name="label_postlisting_longitude">Longitude</string>
    <string name="label_postlisting_expireson">Expiray</string>
    <string name="label_postlisting_post">List item</string>
    <string name="label_listing_image">Listing photo</string>
    <string name="label_browse_cat_search_listing">Search listings</string>
    <string name="label_search_listing_search">Search</string>
    <string name="label_browse_cat_bookmarks">View bookmarks</string>
    <string name="label_browse_cat_browse">Search by category</string>
    <string name="label_my_listing_title">My listings</string>
    <string name="label_bookmark_listing_title">Bookmarks</string>
    <string name="label_detail_listing_price">Price</string>
    <string name="label_detail_listing_category">Category</string>
    <string name="label_detail_listing_photos">Photos</string>
    <string name="label_detail_listing_address">Address</string>
    <string name="label_detail_listing_description">Description</string>
    <string name="label_detail_listing_condition">Condition</string>
    <string name="label_detail_listing_specification">specification</string>
    <string name="label_detail_listing_listed_on">Listed on</string>
    <string name="label_detail_listing_expires_on">Expires on</string>
    <string name="label_detail_listing_seller">Seller</string>
    <string name="label_detail_listing_make_vote">Vote Item</string>
    <string name="label_detail_listing_make_offer">Make offer</string>
    <string name="label_detail_listing_get_it">buy now!</string>
    <string name="label_detail_listing_member_since">Member since </string>
    <string name="label_detail_listing_score">Score</string>
    <string name="label_menu_relist">Relist</string>
    <string name="label_menu_update">Update</string>
    <string name="label_menu_end">End</string>
    <string name="label_menu_delete">Delete</string>
    <string name="label_menu_bookmark">Bookmark</string>
    <string name="label_update">Update</string>
    <string name="label_search">Search</string>
    <string name="label_share">Share</string>
    <string name="label_search_setting">Search Settings</string>
    <string name="label_chooser">Select Source</string>
    <string name="label_follow">Follow</string>
    <string name="label_miles">miles</string>
    <string name="label_remaining">remaining</string>
    <string name="label_left">left</string>
    <string name="label_menu_set_default_img">Set as cover image</string>
    <string name="label_post_listing_cover_img">Cover image</string>
    <string name="label_selected">selected</string>
    <string name="label_menu_refresh">Reload</string>
    <string name="label_menu_reply">Reply</string>
    <string name="label_post">Post</string>
    <string name="error_network_01">Network unavailable. Please check the network.</string>
    <string name="error_network_02">Error occurred while performing network operations. Please try again later.</string>
    <string name="error_social_auth">Unable to login using social network. Please try again later.</string>
    <string name="error_register_user">Unable to register user.</string>
    <string name="error_update_user">Unable to update user details.</string>
    <string name="error_postlisting">Unable to post new listing.</string>
    <string name="error_postlisting_get_location">Unable to get location. Please try again later.</string>
    <string name="error_get_categories">Error occurred while getting categories.</string>
    <string name="error_get_my_listings">Unable to get listings.</string>
    <string name="error_get_listing_details">Unable to get listing details.</string>
    <string name="error_end_listing">Unable to end listing. Please try again later.</string>
    <string name="error_relist_listing">Unable to relist listing. Please try again later.</string>
    <string name="error_delete_listing">Unable to delete listing. Please try again later.</string>
    <string name="error_get_bookmarks">Unable to get bookmarks. Please try again later.</string>
    <string name="error_no_bookmarks">No bookmarks found.</string>
    <string name="error_remove_bookmarks">Unable to remove bookmark. Please try again later.</string>
    <string name="error_search_listings">Unable to get listings. Please try again later.</string>
    <string name="error_update_listing">Unable to update listing. Please try again later.</string>
    <string name="error_search_listings_no_data">No listings found.</string>
    <string name="error_send_message">Message sending failed. Please try again later.</string>
    <string name="error_add_comment">Unable to update comments. Please try again later.</string>
    <string name="error_start_camera">Unable to start camera.</string>
    <string name="error_get_all_messages">Unable to get messages.</string>
    <string name="error_delete_messages">Unable to delete messages.</string>
    <string name="error_post_rating">Unable to post rating.</string>
    <string name="msg_messages_found">messages found.</string>
    <string name="msg_invalid_user_password">Invalid login or password.</string>
    <string name="msg_empty_user_password">Please enter valid login and password.</string>
    <string name="msg_reg_user_duplicate_email">User with the specified E-Mail already exists.</string>
    <string name="msg_reg_user_duplicate_phone">User with the specified phone number already exists.</string>
    <string name="msg_reg_user_duplicate_login">User with the same login already exists.</string>
    <string name="msg_reg_user_registration_success">User registered successfully. Please check email to complete registration.</string>
    <string name="msg_update_user_success">User updated successfully.</string>
    <string name="msg_progress">Loading. Please wait...</string>
    <string name="pref_connect">Connect</string>
    <string name="pref_connect_summ">We will never post anything without your permission.</string>
    <string name="pref_connect_facebook">Facebook</string>
    <string name="pref_key_facebook">pref_key_connect_facebook</string>
    <string name="pref_connect_twitter">Twitter</string>
    <string name="pref_key_twitter">pref_key_connect_twitter</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_listing">Listing</string>
    <string name="pref_key_notification_listing">pref_key_notification_listing</string>
    <string name="pref_notifications_messages">Messages</string>
    <string name="pref_key_notification_messages">pref_key_notification_messages</string>
    <string name="pref_notifications_feedback">Feedback</string>
    <string name="pref_key_notification_feedback">pref_key_notification_feedback</string>
    <string name="pref_privacy_settings">Privacy Settings</string>
    <string name="pref_privacy_settings_email_alerts">Email Alerts</string>
    <string name="pref_key_privacy_settings_email_alerts">pref_key_privacy_settings_email_alerts</string>
    <string name="pref_privacy_settings_text_alerts">Text Message Alerts</string>
    <string name="pref_key_privacy_settings_text_alerts">pref_key_privacy_settings_text_alerts</string>
    <string name="pref_privacy_settings_stay_logged_in">Stay Logged In</string>
    <string name="pref_key_privacy_settings_stay_logged_in">pref_key_privacy_settings_stay_logged_in</string>
</resources>