<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<!-- Connect -->
    <PreferenceCategory
        android:key="pref_key_connect"
        android:title="@string/pref_connect"
        android:summary="@string/pref_connect_summ" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_facebook"
            android:summary="@string/pref_connect_summ"
            android:title="@string/pref_connect_facebook" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_twitter"
            android:summary="@string/pref_connect_summ"
            android:title="@string/pref_connect_twitter" />
    </PreferenceCategory>

    <!-- Notifications -->
    <PreferenceCategory
        android:key="pref_key_notifications"
        android:title="@string/pref_notifications" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notification_listing"
            android:title="@string/pref_notifications_listing" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notification_messages"
            android:title="@string/pref_notifications_messages" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notification_feedback"
            android:title="@string/pref_notifications_feedback" />
    </PreferenceCategory>
    
    <!-- Privacy Settings -->
    <PreferenceCategory
        android:key="pref_key_privacy_settings"
        android:title="@string/pref_privacy_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_privacy_settings_email_alerts"
            android:title="@string/pref_privacy_settings_email_alerts" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_privacy_settings_text_alerts"
            android:title="@string/pref_privacy_settings_text_alerts" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_privacy_settings_stay_logged_in"
            android:title="@string/pref_privacy_settings_stay_logged_in" />
    </PreferenceCategory>
</PreferenceScreen>