<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layActionBarTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100" >

        <TextView
            android:id="@+id/txtListingDetailsPopUpMiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/txtListingDetailsPopUpBidsRem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/txtListingDetailsPopUpDaysRem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:weightSum="100" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/label_miles" />

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/label_left" />

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/label_remaining" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100" >

        <ImageButton
            android:id="@+id/btnListingDetailsPopUpShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:src="@drawable/icon_facebook" />

        <ImageButton
            android:id="@+id/btnListingDetailsPopUpTweet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:src="@drawable/icon_twitter" />

        <ImageButton
            android:id="@+id/btnListingDetailsPopUpMore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:src="@drawable/icon_export" />
    </LinearLayout>

</LinearLayout>